# py-instructor

./: README.md  pyproject.toml
py_instructor/: complete_user_data.py  complete_user_data_with_optional_fields.py
